output.txt
main.c: In function ‘main’:
main.c:17:2: warning: implicit declaration of function ‘signal’ [-Wimplicit-function-declaration]
  signal(SIGINT,sig_handler);
  ^~~~~~
main.c:17:9: error: ‘SIGINT’ undeclared (first use in this function)
  signal(SIGINT,sig_handler);
         ^~~~~~
main.c:17:9: note: each undeclared identifier is reported only once for each function it appears in
main.c:18:2: error: unknown type name ‘pthread_t’
  pthread_t tid = 0;
  ^~~~~~~~~
main.c:20:2: error: expected ‘;’ before ‘pthread_create’
  pthread_create(&tid,NULL,func,NULL);
  ^~~~~~~~~~~~~~
